Fixed results block to not overflow

--- a/assets/sass/base/_typography.scss
+++ b/assets/sass/base/_typography.scss
@@ -55,6 +55,7 @@ p {
 
     &.head {
 	    font-family: $headfont;
+        text-align: center;
     }
 
 	&.tags {
