--- a/assets/sass/layout/_centerdiv.scss
+++ b/assets/sass/layout/_centerdiv.scss
@@ -23,12 +23,11 @@
 // Results block
 	.results {
 		display: flex;
-		text-align: center;
 		justify-content: center;
   		//width: 600px;
   		//margin: 0 auto;
 		.instance {
-			margin: 4em;
+			margin: 3em;
 		}
 	}
 
